--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-# Application properties for ems-backend
 spring.application.name=ems-backend
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/ems
-spring.datasource.username=root
-spring.datasource.password=aravind2004
-# Let Hibernate detect the dialect automatically
-spring.jpa.hibernate.ddl-auto=update
 server.port=8081
+
+# Cloud DB connection
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=true&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
